# vectorial

./: .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  vectorial.cabal
src/Data/Algebra/: Linear.hs
src/Vectorial/: Algebra.hs  Check.hs  Eval.hs  Gates.hs  Lexer.x  Monad.hs  Parser.y  Projection.hs  Syntax.hs  Vector.hs
src/Vectorial/Vector/: Internal.hs
test/: ComplexEvalTests.hs  EvalTests.hs  GatesTest.hs  Main.hs  ParserTests.hs  README.md  Spec.hs
