cabal-version:      3.0
name:               vectorial
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             R.Kashiwagi
maintainer:         kswgrky@gmail.com
-- copyright:
category:           Quantum
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Vectorial.Algebra
                      Vectorial.Gates
                      Vectorial.Vector
    other-modules:    
    build-depends:    base ^>=4.21.0.0,
                      linear-base
    hs-source-dirs:   src
    default-language: GHC2021

executable vectorial
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
    hs-source-dirs:   app
    default-language: GHC2021

test-suite vectorial-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    GatesTest
    build-depends:    base ^>=4.21.0.0,
                      vectorial,
                      HUnit
    hs-source-dirs:   test
    default-language: GHC2021
