cabal-version: 3.0
name: vectorial
version: 0.1.0.0
-- synopsis:
-- description:
license: BSD-3-Clause
license-file: LICENSE
author: R.Kashiwagi
maintainer: kswgrky@gmail.com
-- copyright:
category: Quantum
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Data.Algebra.Linear
    Vectorial.Gates
    Vectorial.Projection
    Vectorial.Vector

  other-modules:
  build-depends:
    base ^>=4.21.0.0,
    linear-base,
    logict,
    random,

  hs-source-dirs: src
  default-language: GHC2021

test-suite vectorial-tests
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: GatesTest
  build-depends:
    HUnit,
    base ^>=4.21.0.0,
    linear-base,
    vectorial,

  hs-source-dirs: test
  default-language: GHC2021
